fixed light/dark mode bugs and implemented global classes for toggling the mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,4 +24,12 @@
   .inputIcon {
     @apply flex items-center justify-center gap-1 hover:bg-gray-100 flex-grow p-2 rounded-xl cursor-pointer;
   }
+
+  .themeLight {
+    @apply bg-white text-gray-800 transition-all duration-100;
+  }
+
+  .themeDark {
+    @apply bg-gray-900 text-gray-100  transition-all duration-100;
+  }
 }
